--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  messages:
+    basename: i18n.login
+
   datasource:
     url: jdbc:mysql://localhost:3306/npulibrary?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
     username: root
